<resources>
    <string name="app_name">PizzaPlanetApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Iniciar Sessión</string>
    <string name="loading">Cargando</string>
    <string name="password">contraseña</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="repeat_password">repetir la contraseña</string>
    <string name="save">Guardar</string>
    <string name="send">Send</string>
    <string name="signup">Registrarse</string>
    <string name="state">Estado</string>
    <string name="user">email@email.com</string>
    <string name="next">Siguiente</string>
    <string name="number_decimal">$ 0.00</string>

    <!---Ingredient-->

    <string name="add_ingredient">Agregar Ingrediente</string>
    <string name="edit_ingredient">Editar Ingrediente</string>
    <string name="select_ingredient">Seleccionar Ingrediente</string>
    <string name="name_ingredient">Nombre Ingrediente</string>
    <string name="state_ingredient">Estado Ingrediente</string>
    <string name="description_ingredient">Descripcion Ingrediente</string>
    <string name="unit_value_ingredient">Valor Ingrediente $</string>
    <string-array name="state_options">
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>

    <!--- Size -->

    <string name="add_size">Agregar Tamaño</string>
    <string name="edit_size">Editar Tamaño</string>
    <string name="select_size">Seleccionar Tamaño</string>
    <string name="name_size">Nombre Tamaño</string>
    <string name="state_size">Estado Tamaño</string>
    <string name="description_size">Descripcion Tamaño</string>
    <string name="unit_value_size">Valor Tamaño $</string>
    <string name="no_size">No existen Tamaños</string>

    <!--- Bill -->
    <string name="bill">Factura</string>
    <string name="name_client">Nombre Cliente</string>
    <string name="identification_card_client">Cédula/RUC</string>
    <string name="identification_example_client">1234567890</string>

</resources>